# Calculator

./: CMakeLists.txt  CalculatorButton.qml  CalculatorModel.qml  README.md  main.cpp  main.qml  math_engine.cpp  math_engine.h  resources.qrc
inc/: math_engine.h
src/: main.cpp  math_engine.cpp
test/: CMakeLists.txt  TestMathEngine.cpp
